--- a/training/02feb2023/practice07.htm
+++ b/training/02feb2023/practice07.htm
@@ -20,10 +20,10 @@
             <label for="city" class="label-ar">City</label>
           </div>
           <div class="input-wrapper">
-            <input type="text" name="firstname" class="input-ar" />
-            <input type="text" name="lastname" class="input-ar" />
-            <input type="text" name="street" class="input-ar" />
-            <input type="text" name="city" class="input-ar" />
+            <input type="text" name="firstname" class="input-ar" required/>
+            <input type="text" name="lastname" class="input-ar" required/>
+            <input type="text" name="street" class="input-ar" required/>
+            <input type="text" name="city" class="input-ar" required/>
           </div>
         </div>
       </fieldset>
@@ -42,7 +42,7 @@
               rows="3"
               class="input-ar"
             ></textarea>
-            <input type="file" name="file" class="input-ar" />
+            <input type="file" name="file" class="input-ar" required/>
             <select name="agegroup" id="agegroup" class="input-ar">
               <option value="">0 to 9</option>
               <option value="">10 to 19</option>
