--- a/training/03feb2023/practice08.htm
+++ b/training/03feb2023/practice08.htm
@@ -110,15 +110,15 @@
           <div class="inputs-form03">
             <input type="text" id="address" name="address" class="inputs03" />
             <input type="text" id="city" name="city" class="inputs03" />
-            <select name="state" id="state" class="inputs03">
+            <select name="state" id="state" class="inputs03" onchange="selector()">
               <option value="" disabled selected hidden>Select state</option>
-              <option value="1">Gujarat</option>
-              <option value="2">Maharashtra</option>
-              <option value="3">Madhya Pradesh</option>
-              <option value="4">Hariyana</option>
-              <option value="5">Punjab</option>
-              <option value="6">J&K</option>
-              <option value="7">Himachal Pradesh</option>
+              <option value="gujarat">Gujarat</option>
+              <option value="maharashtra">Maharashtra</option>
+              <option value="Madhya Pradesh">Madhya Pradesh</option>
+              <option value="Hariyana">Hariyana</option>
+              <option value="Punjab">Punjab</option>
+              <option value="J&K">J&K</option>
+              <option value="Himachal Pradesh">Himachal Pradesh</option>
               <option value="8">Rajasthan</option>
               <option value="9">Goa</option>
             </select>
