given form task completed

--- a/training/03feb2023/practice08.htm
+++ b/training/03feb2023/practice08.htm
@@ -134,8 +134,8 @@
           required
         />
         <select name="contact-no" id="contact-no">
-          <option value="1">Mobile</option>
-          <option value="2">Telephone</option></select
+          <option value="mobile">Mobile</option>
+          <option value="telephone">Telephone</option></select
         ><br />
         <button type="submit" onclick="validate()">Submit</button>
       </form>
