--- a/training/07feb2023/ArrayPractice/ArrayExercises/removeDuplicates.htm
+++ b/training/07feb2023/ArrayPractice/ArrayExercises/removeDuplicates.htm
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript</title>
+    <title>Remove Duplicates from an array</title>
 </head>
 <body>
-    <div id="main"></div>
-    <script src="SumAvgMax.js"></script>
+    <script src="removeDuplicates.js"></script>
 </body>
 </html>
