--- a/training/10feb2023/FunctionPractice/Practice2.2/case02/Bmi.htm
+++ b/training/10feb2023/FunctionPractice/Practice2.2/case02/Bmi.htm
@@ -12,7 +12,7 @@
         <input type="number" id="mass">
         <br>
         <label for="height">Enter your heigth(meter): </label>
-        <input type="number" id="weight">
+        <input type="number" id="height">
         <button onclick="bmiCalc()">Calculate</button>
         
     </div>
