--- a/training/14feb2023/EvaluationTask/Register/register.htm
+++ b/training/14feb2023/EvaluationTask/Register/register.htm
@@ -12,13 +12,13 @@
     
             <div id="regForm">
                 <input type="text" name="name" id="name" placeholder="Name">
-                <span id="nameErr"></span>
+                <span id="nameErr" class="error"></span>
                 <input type="email" name="email" id="email" placeholder="Email">
-                <span id="emailErr"></span>
+                <span id="emailErr" class="error"></span>
                 <input type="password" name="password" id="password" placeholder="Password">
-                <span id="passErr"></span>
+                <span id="passErr" class="error"></span>
                 <input type="password" name="rePass" id="rePass" placeholder="Re Enter Password">
-                <span id="rePassErr"></span>
+                <span id="rePassErr" class="error"></span>
                 <select name="cities" id="cities" >
                     <option selected disabled hidden>Select city</option>
                     <option value="ahmedabad">Ahmedabad</option>
