--- a/training/14feb2023/EvaluationTask/Dashboard/index.htm
+++ b/training/14feb2023/EvaluationTask/Dashboard/index.htm
@@ -1,32 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
-    <div id="main">
-        <div id="navbar_container">
-            <div id="navbar" class="items">
-                <div id="dash" class="items">
-                    Dashboard
-                </div>
-                <div id="users"class="items"> 
-                    Users
-                </div>
-                <div id="loginsession" class="items">
-                    Login Session
-                </div>
-                <div id="logout" class="items">
-                    Logout
-                </div>
-            </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
+
+    <title>DashBoard</title>
+  </head>
+  <body onload="test()">
+    <div class="navbar">
+      <p id="loggedInUser">user name</p>
+
+      <div class="navbar_items">
+        <div class="item" id="dashBoard" onclick="dash()">
+            Dashboard
         </div>
-        
-        <div id="content">bhbhbhhb</div>
+        <div class="item" id="users" onclick="userPage()">Users</div>
+        <div class="item" id="loginSessions">Login Sessions</div>
+        <div class="item" id="logout">Logout</div>
+      </div>
     </div>
-</body>
+    <div class="body">
+      <p class="title">Dashboard</p>
+      <div class="userDataContainer">
+        <div class="userData" id="card01">
+          <p>Users<18</p>
+          <h4>user data</h4>
+        </div>
+        <div class="userData" id="card02">
+          <p>Users 18 -50</p>
+          <h4>user data</h4>
+        </div>
+        <div class="userData" id="card03">
+          <p>Users>50</p>
+          <h4>user data</h4>
+        </div>
+      </div>
+    </div>
+    <script src="index.js"></script>
+  </body>
 </html>
