admin panel completed

--- a/training/14feb2023/EvaluationTask/Dashboard/subUserDesh/index.html
+++ b/training/14feb2023/EvaluationTask/Dashboard/subUserDesh/index.html
@@ -16,27 +16,13 @@
         <div class="item" id="dashBoard" onclick="dash()">
             Dashboard
         </div>
-        <div class="item" id="users" onclick="userPage()">Users</div>
-        <div class="item" id="loginSessions">Login Sessions</div>
+        
         <div class="item" id="logout" onclick="logout()">Logout</div>
       </div>
     </div>
     <div class="body">
-      <p class="title">Dashboard</p>
-      <div class="userDataContainer">
-        <div class="userData" id="card01">
-          <p>Users<18</p>
-          <h4>user data</h4>
-        </div>
-        <div class="userData" id="card02">
-          <p>Users 18 -50</p>
-          <h4>user data</h4>
-        </div>
-        <div class="userData" id="card03">
-          <p>Users>50</p>
-          <h4>user data</h4>
-        </div>
-      </div>
+      <h2 class="title">Welcome to Cybercom</h2>
+      
     </div>
     <script src="index.js"></script>
   </body>
